# mhw-toolkit

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: security-guide.md
src/: game_export.rs  game_util.rs  keys.rs  lib.rs  logger.rs  lua_engine.rs  macros.rs  memory.rs  util.rs
src/game/: address.rs  mod.rs
src/game/hooks/: action.rs  chat.rs  hit.rs  mod.rs  monster.rs
src/game/mt_types/: basic.rs  entity.rs  mod.rs  model.rs  mt_array.rs  mt_dti.rs
src/game/resources/: action.rs  collision.rs  mod.rs  player.rs  quest.rs  save.rs  weapon.rs
src/game/resources/abnormalities/: consumables.rs  debuffs.rs  mod.rs  service.rs  skills.rs  songs.rs
src/game/resources/entities/: health.rs  mod.rs  monster.rs  player.rs
src/keys/: keycode.rs  keys.rs  keys_ll.rs  mod.rs
src/utils/: memory.rs  mod.rs  util.rs
