[package]
name = "mhw_toolkit"
version = "0.1.0"
edition = "2021"

[workspace]
    [workspace.dependencies]
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
mlua = { version = "0.9", features = ["lua54", "vendored"], optional = true }
once_cell = "1.19"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
winapi = { version = "0.3", features = ["winuser", "stringapiset", "winnls"] }
tokio = { version = "1.37", features = ["full"], optional = true }
windows = { version = "0.57.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Memory",
    "Win32_System_Threading"
] }
minhook-sys = { version = "0.1", optional = true }
thiserror = "1.0"
rand = "0.8"
address_scanner = { path = "../address_scanner" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []
lua_engine = ["mlua"]
logger = []
async-tokio = ["tokio"]
hooks = ["minhook-sys"]
