[package]
name = "mhw_toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
    [workspace.dependencies]
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"


[dependencies]
log = { version = "0.4" }
once_cell = "1.19"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Globalization",
] }
thiserror = "1.0"
rand = "0.8"
address_scanner = { path = "../address-scanner" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
mlua = { version = "0.9", features = ["lua54", "vendored"], optional = true }
tokio = { version = "1.37", features = ["full"], optional = true }
minhook-sys = { version = "0.1", optional = true }

[features]
default = ["logger", "hooks"]
lua_engine = ["mlua"]
logger = []
async-tokio = ["tokio"]
hooks = ["minhook-sys"]
